# cloud-course

./: .gitignore  Ubunto Lite Image for VBox
Exemples/GBQ/: Bigquery_edc.md  Bigquery_edc_qts.md
Exemples/vertex-ai/: example 1 - run-local-cloud - ai_platform_qwik_start.ipynb
app/: Dockerfile  insall_pyenv_debian.txt  pyproject.toml
app/src/mass_price_regression/MASS_23_12/: mass_qualitative_groups.json  mass_used_vars.json  mass_variable_reference.json  predict.py
app/src/mass_price_regression/MASS_23_12/descritizers/: mass_quanti_descritizer_StandardScaler
app/src/mass_price_regression/MASS_23_12/templates/: result.html
app/tests/: test_price_predict.py
app_exam/: pyproject.toml
app_exam/src/iam_a_folder/iam_another_folder/: XGBoost_score_health_price_regression__mass.pickle  app.py  mass_imput_quanti.json  the_best_app_ever.py
app_exam/src/iam_a_folder/iam_another_folder/templates/: index.html
app_exam/tests/: unit_test_mass_price_regression.json
docker_apps/: docker_commands
docker_apps/mysql-database/: Dockerfile  README.md  create_table.sql
docker_apps/nginex_webapp/: Dockerfile  README.md
docker_apps/nginex_webapp/website/: index.html
docker_apps/node_js_webapp/: Dockerfile  README.md  server.js
docker_apps/postgres_database/: Dockerfile  README.md  create_db_users.sql
docker_apps/python_webapp/: README.md  app.py
docker_apps/redis-db/: README.md
docker_apps/simple_fullstack_app/: Readme.md  app.py
docker_compose_apps/project_docker_compose/: docker-compose.yml
docker_compose_apps/project_docker_compose/backend/: Dockerfile  (+2 more)
(+5 files in other folders)
